--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,4 @@ baseURL = "https://blog.dericilab.live/"
 languageCode = "en-us"
 title = "Musings, Ramblings & Equations"
 theme = "flat"
+summaryLength = 60
