change(title): just name is fine

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = "https://blog.dericilab.live/"
 languageCode = "en-us"
-title = "Musings, Ramblings & Equations"
+title = "Caner Derici"
 theme = "flat"
 summaryLength = 60
